--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "https://DanielDXB.github.io/gg0front",
+  "homepage": "https://DanielDXB.github.io/gg0front",
   "name": "licenta",
   "private": true,
   "version": "0.0.0",
